# pythonchallenge

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/: 00.py  01.py  03.py  level_00.py  level_01.py  level_02.py  level_03.py  level_04.py  level_05.py  level_06.py  level_07.py  utils.py
