[tool.poetry]
name = "pythonchallenge"
version = "0.1.0"
description = ""
authors = [" "]

[tool.poetry.dependencies]
python = ">3.9,<4"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
