[tool.poetry]
name = "pythonchallenge"
version = "0.1.0"
description = ""
authors = [" "]

[tool.poetry.dependencies]
python = ">3.9,<4"
lxml = "4.7.1"
pyquery = "^1.4.3"
requests = "^2.27.1"
beautifulsoup4 = "^4.11.1"
progress = "^1.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
