[project]
name = "pythonchallenge"
version = "0.0.0"
requires-python = ">=3.9,<4.0"
dependencies = [
    "httpx>=0.24.1",
    "httpx-cache>=0.12.0",
    "beautifulsoup4>=4.12.2",
]


[tool.ruff]
extend-select = [
  "I", # isort
]
ignore = [
  "E501",   # line-too-long
  "S101",   # Use of `assert` detected
  "TRY003", # raise-vanilla-args
]

# upload_to_repository
[tool.ruff.isort]
# https://beta.ruff.rs/docs/settings/#isort
force-single-line = true
lines-after-imports = 2
